Add simulation reference data browsing for TEP demo
